[tool.poetry]
name = "domainlab"
version = "0.1.0"
description = "Library of Domain Generalization"
authors = ["Xudong Sun <smilesun.east@gmail.com>", "Alexej Gossmann <alexej.gossmann@fda.hhs.gov>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.8.1"
torchvision = "0.9.1"
matplotlib = "^3.0.2"
torchmetrics = "^0.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
