[tool.poetry]
name = "domainlab"
version = "0.1.0"
description = "Library of Domain Generalization"
authors = ["Xudong Sun <smilesun.east@gmail.com>", "Alexej Gossmann <alexej.gossmann@fda.hhs.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
torchmetrics = "^0.10.0"
torch = "^1.13.0"
torchvision = "0.2.2.post3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
