[tool.poetry]
name = "domainlab"
version = "0.1.6"
description = "Library of Domain Generalization"
authors = ["Xudong Sun <smilesun.east@gmail.com>", "Alexej Gossmann <alexej.gossmann@fda.hhs.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
seaborn = "0.12.2"
torchmetrics = "^0.10.0"
torch = "^1.12.0"
torchvision = "^0.13.0"
pillow = "^9.3.0"
rich = "^13.3.1"
pandas = "^1.5.1"
scikit-learn = "^1.2.1"
pyyaml = "^6.0"
gdown = "^4.7.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable=[
  'no-name-in-module'
]
